--- a/WitccoBLH/BLH/nbproject/project.properties
+++ b/WitccoBLH/BLH/nbproject/project.properties
@@ -32,11 +32,11 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.Koala Layout.classpath}:\
-    ${libs.Jcal.classpath}:\
-    ${libs.Exc.classpath}:\
-    ${libs.jdbcSqlServer.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JasperReport.classpath}
+    ${libs.Driver_SQL_JDBC.classpath}:\
+    ${libs.Calendar.classpath}:\
+    ${libs.Excel.classpath}:\
+    ${libs.jasperReports.classpath}
     ${libs.jReport.classpath}
     ${libs.Driver_SQL_JDBC.classpath}:\
     ${libs.Jasper.classpath}:\
